# mestradao

./: pyproject.toml
apps/: data_prep.py  mestrado_carol.py
