[project]
name = "mestrado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "polars>=1.26.0",
    "plotly>=6.0.1",
    "nbformat==5.10.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "altair>=5.4.0",
    "plotnine>=0.14.5",
    "pyyaml>=6.0.2",
    "jupyter>=1.1.1",
    "quarto>=0.1.0",
    "great-tables>=0.17.0",
    "anywidget>=0.9.18",
    "rich>=14.0.0",
    "marimo>=0.15.2",
    "ruff>=0.12.11",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "google-genai>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mestrado"]
